# iseyaa-ai-engine

./: .dockerignore  .flake8  .gitignore  .prettierignore  .prettierrc  .sqltools  CONTRIBUTING.md  README.md  ci_log.txt  ci_log_utf8.txt  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  start_iseyaa.ps1  sync_supabase.py  sync_supabase_v2.py  sync_supabase_v3.py  sync_supabase_v4.py  test_supabase.py  turbo.json  vercel.json
.github/workflows/: main.yml
apps/ai-engine/: Dockerfile  main.py  package.json  render.yaml  run_migration.py  run_server.py
apps/ai-engine/database/: __init__.py  finance.py  hospitality.py
apps/ai-engine/routers/: agriculture.py  commerce.py  creative.py  finance.py  governance.py  health.py  hospitality.py  identity.py  legal.py  mobility.py  security.py
apps/ai-engine/services/: auth.py  paystack.py
apps/api/: .env.example  .gitignore  Dockerfile  db.py  main.py  package.json  render.yaml  requirements.txt  run_migration.py  run_server.py  verify_ai_link.py
apps/api/database/: commerce.py  hospitality.py  identity.py
apps/api/routers/: __init__.py  commerce.py  education.py  hospitality.py  identity.py  mobility.py  utilities.py  waste.py
apps/api/services/: ai_staff.py  auth.py  communications.py  kyc.py
apps/api/templates/: dashboard.html
apps/api/tests/: smoke_test.py
apps/dashboard/: package-lock.json  package.json
apps/dashboard/app/: globals.css  layout.js  page.js  page.module.css
apps/host/: package-lock.json  package.json
apps/host/app/: globals.css  layout.js  page.js  page.module.css
k8s/: deployment.yaml
project-management/: ARCHITECTURE.md  PRD_v1.1.md  SQUADS.md
scripts/: setup_github.sh  setup_supabase.sh  start_backend.sh  start_frontend.sh
supabase/: config.json  config.toml
supabase/migrations/: 001_create_destinations.sql  002_create_lga_profiles.sql  004_phase4_5_commercial.sql  005_oha_governance.sql  006_oemg_events.sql  007_mssi_signals.sql  20240405_phase3_v1.sql  placeholder.txt
